[package]
name = "wavefn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#idek_basics = { path = "../idek_basics" }
idek_basics = { git = "https://github.com/Masterchef365/idek-basics.git", branch = "offset" }

[profile.release]
debug = true
